--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section class="buttons">
             <button onclick="redirect()">me cadastrar →</button>
-            <button>entrar</button>
+            <button onclick="redirect()">entrar</button>
         </section>
     </header>
     
